[package]
name = "csgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.10"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "memoryapi",
    "handleapi",
    "processsnapshot",
    "processthreadsapi",
    "tlhelp32",
    "wow64apiset",
    "errhandlingapi"

] }
